[package]
name = "cef-rust"
version = "0.1.0"
authors = ["DaemonSnake(Bastien Penavayre) <bastienPenava@gmail.com>"]
edition = "2018"
repository = "git@github.com:DaemonSnake/cef-rust.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
