[package]
name = "cef-rust"
version = "0.1.0"
authors = ["DaemonSnake(Bastien Penavayre) <bastienPenava@gmail.com>"]
edition = "2018"
repository = "git@github.com:DaemonSnake/cef-rust.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
links = "cef"
build = "build.rs"

[build-dependencies]
cmake = "0.1"
bindgen = "0.53.2"
scraper = "0.11.0"
reqwest = "*"